--- a/Views/Staff/_StaffLayout.cshtml
+++ b/Views/Staff/_StaffLayout.cshtml
@@ -69,7 +69,7 @@
 
                             <!-- Logout Button -->
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-controller="Staff" asp-action="Logout">ออกจากระบบ</a>
+                                <a class="nav-link text-dark" asp-controller="Staff" asp-action="Logout" onclick="return confirm('คุณต้องการออกจากระบบ?');">ออกจากระบบ</a>
                             </li>
                         }
                     </ul>
