Update _StaffLayout Search

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
     {
         <input type="text" name="searchTerm" value="@ViewData["SearchTerm"]" class="form-control form-control-sm" placeholder="ค้นหาจากชื่อผู้แจ้งซ่อม" aria-label="Search">
         <button class="btn btn-primary text-white btn-sm"  type="submit" style="width: 120px;">
-            <i class="fas fa-search me-1" style="font-size: 1rem;"> </i> Search
+            <i class="fas fa-search me-1" style="font-size: 1rem;"> </i> ค้นหา
         </button>
 
     }
