Update BasicAgentComment System

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Repair">แจ้งซ่อม</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQ">คำถามที่พบบ่อย</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Tutorial">วิธีการใช้งาน</a>
                         </li>
                         <li class="nav-item">
